@@ -1,3 +1,6 @@
+--March 3, 2010--
+- Added tooltips to project lists to help differentiate similar projects
+
 --February 27, 2010--
 - Added support for PopupApplets.
 
